community part completed

--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,7 @@ body {
 }
 
 nav {
-    width: 100%;
+  width: 100%;
   background-color: #f5f7fa;
   color: #18191f;
   text-align: center;
@@ -230,3 +230,75 @@ main {
   text-decoration-skip-ink: none;
   color: #717171;
 }
+
+#Feature .down {
+  display: flex;
+  gap: 127.5px;
+  justify-content: space-around;
+  align-items: center;
+  flex-wrap: wrap;
+}
+
+#Feature .down .card {
+  display: flex;
+  flex-direction: column;
+  width: Fixed (299px) px;
+  height: Hug (260px) px;
+  padding: 24px 32px 24px 32px;
+  gap: 8px;
+  border-radius: 8px 0px 0px 0px;
+  opacity: 0px;
+  align-items: center;
+  box-shadow: 0px 2px 4px 0px #abbed133;
+  margin: 15px;
+}
+
+#Feature .down .card .topPart {
+  width: Fixed (267px) px;
+  height: Hug (144px) px;
+  opacity: 0px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+}
+
+#Feature .down .card .topPart img {
+  width: 65px;
+  height: 56px;
+}
+
+#Feature .down .card .topPart h3 {
+  font-family: Inter;
+  font-size: 28px;
+  font-weight: 700;
+  line-height: 36px;
+  text-align: center;
+  text-underline-position: from-font;
+  text-decoration-skip-ink: none;
+  color: #000000;
+  margin-bottom: 0px;
+}
+
+#Feature .down .card .bottomPart {
+  width: Hug (251px) px;
+  height: Hug (60px) px;
+  gap: 8px;
+  opacity: 0px;
+}
+
+#Feature .down .card .bottomPart p {
+  width: 251px;
+  height: 60px;
+  gap: 0px;
+  opacity: 0px;
+  font-family: Inter;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 24px;
+  text-align: center;
+  text-underline-position: from-font;
+  text-decoration-skip-ink: none;
+  color: #717171;
+}
+
