--- a/css/style.css
+++ b/css/style.css
@@ -408,3 +408,167 @@ main {
   opacity: 0px;
   background-color: #f5f7fa;
 }
+
+#Product .product-second .product-second-sub1 {
+  display: flex;
+  flex-direction: column;
+  width: Fixed (540px) px;
+  height: Hug (120px) px;
+  opacity: 0px;
+}
+
+#Product .product-second .product-second-sub1 h2 {
+  width: 408px;
+  height: 88px;
+  gap: 0px;
+  opacity: 0px;
+  font-family: Inter;
+  font-size: 36px;
+  font-weight: 600;
+  line-height: 44px;
+  text-align: left;
+  text-underline-position: from-font;
+  text-decoration-skip-ink: none;
+  color: #4d4d4d;
+  margin: 0px;
+  padding: 0px;
+}
+#Product .product-second .product-second-sub1 span {
+  font-family: Inter;
+  font-size: 36px;
+  font-weight: 600;
+  line-height: 44px;
+  text-align: left;
+  text-underline-position: from-font;
+  text-decoration-skip-ink: none;
+  color: #4caf4f;
+}
+
+#Product .product-second .product-second-sub2 p {
+  width: 540px;
+  height: 80px;
+  gap: 0px;
+  opacity: 0px;
+  font-family: Inter;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 24px;
+  text-align: left;
+  text-underline-position: from-font;
+  text-decoration-skip-ink: none;
+  color: #18191f;
+  margin: 0px;
+  padding: 0px;
+}
+
+#Product .product-second .product-second-sub2 {
+  display: flex;
+  flex-direction: column;
+  width: Hug (540px) px;
+  height: Hug (160px) px;
+  gap: 40px;
+  opacity: 0px;
+}
+
+#Product .product-second .product-second-sub2 .row1 {
+  width: Hug (540px) px;
+  height: Hug (60px) px;
+  gap: 30px;
+  opacity: 0px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+#Product .product-second .product-second-sub2 .row2 {
+  width: Hug (540px) px;
+  height: Hug (60px) px;
+  gap: 30px;
+  opacity: 0px;
+  display: flex;
+}
+
+#Product .product-third {
+  width: Hug (1, 440px) px;
+  height: Hug (433.4px) px;
+  gap: 0px;
+  opacity: 0px;
+  align-items: center;
+  justify-content: center;
+}
+
+#Product .product-third .product-third-main {
+  display: flex;
+  width: Fixed (1, 440px) px;
+  height: Hug (433.4px) px;
+  padding: 0px 144px 0px 144px;
+  gap: 0px;
+  justify-content: space-between;
+  align-items: center;
+  opacity: 0px;
+}
+
+#Product .product-third-sub1 {
+  width: 441.53px;
+  height: 433.4px;
+  gap: 0px;
+  opacity: 0px;
+  padding: 10px;
+}
+
+#Product .product-third-sub2 {
+  display: flex;
+  flex-direction: column;
+  width: Fixed (661px) px;
+  height: Hug (308px) px;
+  gap: 32px;
+  opacity: 0px;
+}
+
+#Product .product-third-sub2 .firstPart h2 {
+  width: 601px;
+  height: 88px;
+  gap: 0px;
+  opacity: 0px;
+  font-family: Inter;
+  font-size: 36px;
+  font-weight: 600;
+  line-height: 44px;
+  text-align: left;
+  text-underline-position: from-font;
+  text-decoration-skip-ink: none;
+  color: #4d4d4d;
+  margin-bottom: 0px;
+  padding-bottom: 0px;
+}
+
+#Product .product-third-sub2 .firstPart p {
+  width: 601px;
+  height: 120px;
+  gap: 0px;
+  opacity: 0px;
+  font-family: Inter;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 20px;
+  text-align: left;
+  text-underline-position: from-font;
+  text-decoration-skip-ink: none;
+  color: #717171;  
+  margin: 0px;
+  padding: 0px;
+}
+
+#Product .product-third-sub2 .lastPart button {
+  width: Hug (151px) px;
+  height: Hug (52px) px;
+  padding: 14px 32px 14px 32px;
+  gap: 10px;
+  border-radius: 4px;
+  opacity: 0px;
+  border: none;
+  color: white;
+  background-color: #4caf4f;
+  font-family: Inter;
+  font-size: 16px;
+}
