--- a/css/style.css
+++ b/css/style.css
@@ -714,26 +714,189 @@ main {
 
 #Product .product-fourth .product-fourth-sub2 .partTwo .partTwo-sub2 h4 {
   width: 188px;
-height: 28px;
-gap: 0px;
-opacity: 0px;
-font-family: Inter;
-font-size: 20px;
-font-weight: 600;
-line-height: 28px;
-text-align: left;
-text-underline-position: from-font;
-text-decoration-skip-ink: none;
-color: #4caf4f;
-margin: 0px;
-padding: 0px;
+  height: 28px;
+  gap: 0px;
+  opacity: 0px;
+  font-family: Inter;
+  font-size: 20px;
+  font-weight: 600;
+  line-height: 28px;
+  text-align: left;
+  text-underline-position: from-font;
+  text-decoration-skip-ink: none;
+  color: #4caf4f;
+  margin: 0px;
+  padding: 0px;
 }
 
 #Product .product-fourth .product-fourth-sub2 .partTwo .partTwo-sub2 img {
   width: 24px;
-height: 24px;
-padding: 8px 5px 8px 4.41px;
-gap: 0px;
-opacity: 0px;
-margin-left: -17px;
+  height: 24px;
+  padding: 8px 5px 8px 4.41px;
+  gap: 0px;
+  opacity: 0px;
+  margin-left: -17px;
+}
+
+#Product .product-five {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: Hug (1, 440px) px;
+  height: Hug (506px) px;
+  gap: 16px;
+  opacity: 0px;
+}
+
+#Product .product-five .product-five-first {
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  align-items: center;
+  justify-content: center;
+  width: Fixed (1, 110px) px;
+  height: Hug (124px) px;
+  gap: 8px;
+  opacity: 0px;
+  margin: 0px;
+  padding: 0px;
+}
+
+#Product .product-five .product-five-first h2 {
+  width: 1110px;
+  height: 44px;
+  gap: 0px;
+  opacity: 0px;
+  font-family: Inter;
+  font-size: 36px;
+  font-weight: 600;
+  line-height: 44px;
+  text-align: center;
+  text-underline-position: from-font;
+  text-decoration-skip-ink: none;
+  color: #4d4d4d;
+  margin: 0px;
+  padding: 0px;
+}
+
+#Product .product-five .product-five-first p {
+  width: 628px;
+  height: 72px;
+  gap: 0px;
+  opacity: 0px;
+  font-family: Inter;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 24px;
+  text-align: center;
+  text-underline-position: from-font;
+  text-decoration-skip-ink: none;
+  color: #717171;
+  margin: 0px;
+  padding: 0px;
+}
+
+#Product .product-five .product-five-second {
+  display: flex;
+  width: Fixed (1, 440px) px;
+  height: Hug (366px) px;
+  padding: 0px 144px 0px 144px;
+  gap: 24px;
+  justify-content: space-between;
+  opacity: 0px;
+}
+
+#Product .product-five .product-five-second .card {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: Hug (368px) px;
+  height: Hug (366px) px;
+  gap: 0px;
+  opacity: 0px;
+}
+
+#Product .product-five .product-five-second .card img {
+  width: 368px;
+  height: 286px;
+  gap: 0px;
+  border-radius: 8px 0px 0px 0px;
+  opacity: 0px;
+  margin: 0px;
+  padding: 0px;
+}
+
+#Product .product-five .product-five-second .card .content {
+  background: #f5f7fa;
+  box-shadow: 0px 8px 16px 0px #abbed166;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  box-sizing: border-box;
+  width: 317px;
+  height: Hug (176px) px;
+  padding: 16px 0px 0px 0px;
+  gap: 16px;
+  border-radius: 8px;
+  opacity: 0px;
+  margin: -25%;
+}
+
+#Product .product-five .product-five-second .card .content h4 {
+  width: 285px;
+  height: 84px;
+  gap: 0px;
+  opacity: 0px;
+  font-family: Inter;
+  font-size: 20px;
+  font-weight: 600;
+  line-height: 28px;
+  text-align: center;
+  text-underline-position: from-font;
+  text-decoration-skip-ink: none;
+  color: #717171;
+  margin: 0px;
+  padding: 0px;
+}
+
+#Product .product-five .product-five-second .card .content .content-sub {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  width: Fill (285px) px;
+  height: Hug (44px) px;
+  padding: 8px 0px 0px 0px;
+  gap: 8px;
+  opacity: 0px;
+  margin: 0px;
+}
+
+#Product .product-five .product-five-second .card .content .content-sub h4 {
+  width: 99px;
+  height: 28px;
+  gap: 0px;
+  opacity: 0px;
+  font-family: Inter;
+  font-size: 20px;
+  font-weight: 600;
+  line-height: 28px;
+  text-align: left;
+  text-underline-position: from-font;
+  text-decoration-skip-ink: none;
+  color: #4caf4f;
+  margin: 0px;
+  padding: 0px;
+}
+
+#Product .product-five .product-five-second .card .content .content-sub img {
+  width: 24px;
+  height: 24px;
+  padding: 8px 5px 8px 4.41px;
+  gap: 0px;
+  opacity: 0px;
+  margin-left: -13px;
 }
